--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,10 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="fab_margin">8dp</dimen>
+
+    <dimen name="arrow_size">32dp</dimen>
+    <dimen name="standard_padding_small">4dp</dimen>
+    <dimen name="todo_head_padding">8dp</dimen>
+    <dimen name="todo_padding">32dp</dimen>
+    <dimen name="standard_padding_large">16dp</dimen>
 </resources>
