--- a/app/src/main/res/layout/todo_list_layout.xml
+++ b/app/src/main/res/layout/todo_list_layout.xml
@@ -5,16 +5,24 @@
                 android:layout_height="match_parent"
                 xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/no_todos"
-        android:text="No ToDos"
         android:layout_centerVertical="true"
-        android:gravity="center"
-        android:visibility="gone"
-        tools:visibility="visible"
-        />
+        android:orientation="vertical"
+        android:id="@+id/no_todos"
+        >
+        <TextView
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="No ToDos"
+            android:layout_centerVertical="true"
+            android:visibility="gone"
+            tools:visibility="visible"
+            />
+    </LinearLayout>
+
 
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
@@ -29,7 +37,7 @@
         </android.support.v7.widget.RecyclerView>
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/fab_edit_task"
+            android:id="@+id/add_todo_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
