--- a/app/src/main/res/layout/todo_list_layout.xml
+++ b/app/src/main/res/layout/todo_list_layout.xml
@@ -23,7 +23,6 @@
             />
     </LinearLayout>
 
-
     <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
@@ -32,9 +31,22 @@
         <android.support.v7.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycler_view">
+            android:id="@+id/recycler_view"
+            app:layoutManager="LinearLayoutManager"
+            tools:listitem="@layout/todo_head_item"
+            />
 
-        </android.support.v7.widget.RecyclerView>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            app:layout_anchor="@id/recycler_view"
+            app:layout_anchorGravity="bottom|right|end"
+            >
+            <include layout="@layout/speed_dial_fab_layout"/>
+
+        </RelativeLayout>
+
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/add_todo_fab"
@@ -43,8 +55,10 @@
             android:layout_margin="@dimen/fab_margin"
             app:srcCompat="@drawable/ic_add"
             app:fabSize="normal"
+            android:visibility="visible"
             app:layout_anchor="@id/recycler_view"
             app:layout_anchorGravity="bottom|right|end" />
+
 
     </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
