--- a/app/src/main/res/layout/todo_item.xml
+++ b/app/src/main/res/layout/todo_item.xml
@@ -7,6 +7,10 @@
     android:orientation="horizontal"
     android:padding="@dimen/todo_head_padding">
 
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
     <TextView
         android:id="@+id/todo_name"
         android:layout_width="match_parent"
