--- a/app/src/main/res/layout/todo_list_layout.xml
+++ b/app/src/main/res/layout/todo_list_layout.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/no_todos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:orientation="vertical"
-        android:id="@+id/no_todos"
         >
+
         <TextView
-            android:gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="No ToDos"
             android:layout_centerVertical="true"
+            android:gravity="center"
+            android:text="No ToDos"
             android:visibility="gone"
             tools:visibility="visible"
             />
@@ -29,36 +31,22 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/recycler_view"
             app:layoutManager="LinearLayoutManager"
             tools:listitem="@layout/todo_head_item"
             />
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            app:layout_anchor="@id/recycler_view"
-            app:layout_anchorGravity="bottom|right|end"
-            >
-            <include layout="@layout/speed_dial_fab_layout"/>
-
-        </RelativeLayout>
-
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/add_todo_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/fab_margin"
-            app:srcCompat="@drawable/ic_add"
-            app:fabSize="normal"
             android:visibility="visible"
+            app:fabSize="normal"
             app:layout_anchor="@id/recycler_view"
-            app:layout_anchorGravity="bottom|right|end" />
-
-
+            app:layout_anchorGravity="bottom|right|end"
+            app:srcCompat="@drawable/ic_add"/>
     </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
