--- a/app/src/main/res/layout/category_dialog_layout.xml
+++ b/app/src/main/res/layout/category_dialog_layout.xml
@@ -2,23 +2,24 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="280dp"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+
+    android:layout_gravity="center_horizontal"
     >
 
     <android.support.design.widget.TextInputLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:id="@+id/textInputLayout"
+        style="@style/DialogStyle"
         >
 
         <EditText
             style="@style/ToDoHeadStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
             android:maxLines="1"
             android:id="@+id/category_name"
             android:hint="@string/category_name_hint"
@@ -30,36 +31,21 @@
         android:id="@+id/cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/textInputLayout"
-        android:layout_marginTop="22dp"
-        android:layout_toLeftOf="@+id/divider"
-        android:layout_toStartOf="@+id/divider"
-        style="?android:attr/borderlessButtonStyle"
+        style="@style/CategoryDialogButtonTheme"
         tools:text="@string/cancel_button_label"
-        />
+        android:layout_below="@+id/textInputLayout"
+        android:layout_toLeftOf="@+id/confirm"
+        android:layout_toStartOf="@+id/confirm"/>
 
     <Button
         android:id="@+id/confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/cancel"
-        android:layout_alignBottom="@+id/cancel"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
         tools:text="@string/create_button_label"
-        android:layout_toRightOf="@+id/divider"
-        android:layout_toEndOf="@+id/divider"
-        style="?android:attr/borderlessButtonStyle"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="120dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/divider"/>
+        style="@style/CategoryDialogButtonTheme"
+        android:layout_below="@+id/textInputLayout"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
 
 
 </RelativeLayout>
