--- a/app/src/main/res/layout/todo_details.xml
+++ b/app/src/main/res/layout/todo_details.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,6 +15,29 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:id="@+id/ll_main">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/category"
+                android:gravity="center_vertical"
+                android:textSize="@dimen/text_regular_size"
+                />
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout_height="48dp"
+                android:id="@+id/spinner"
+                tools:listitem="@layout/spinner_simple_item"
+                />
+        </LinearLayout>
+
+
 
 
         <android.support.design.widget.TextInputLayout
@@ -28,6 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/todo_title_hint"
+                android:textSize="@dimen/text_regular_size"
                 />
 
         </android.support.design.widget.TextInputLayout>
@@ -39,7 +64,9 @@
             android:maxLines="10"
             android:lines="5"
             android:gravity="top"
-            android:hint="@string/description_hint" />
+            android:hint="@string/description_hint"
+            android:textSize="@dimen/text_regular_size"
+            />
 
     </LinearLayout>
     <android.support.design.widget.FloatingActionButton
