--- a/app/src/main/res/layout/category_dialog_layout.xml
+++ b/app/src/main/res/layout/category_dialog_layout.xml
@@ -28,6 +28,19 @@
     </android.support.design.widget.TextInputLayout>
 
     <Button
+        android:id="@+id/delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/CategoryDialogButtonTheme"
+        android:layout_below="@+id/textInputLayout"
+        android:layout_toLeftOf="@+id/cancel"
+        android:layout_toStartOf="@+id/cancel"
+        android:visibility="gone"
+        android:text="@string/delete_button_label"
+        tools:visibility="visible"
+        />
+
+    <Button
         android:id="@+id/cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
