--- a/app/src/main/res/layout/todo_head_item.xml
+++ b/app/src/main/res/layout/todo_head_item.xml
@@ -10,7 +10,7 @@
     android:padding="@dimen/todo_head_padding">
 
     <TextView
-        android:id="@+id/item_header_name"
+        android:id="@+id/category_item_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/todo_head_padding"
